Upgraded Spring Major Release Version